# cellular-automata

./: README.md  cellular-automata.cabal  stack.yaml
bench/: Main.hs
cellular-automata/: cellular-automata.cabal
cellular-automata-alpaca/: cellular-automata-alpaca.cabal
cellular-automata-alpaca/src/CA/ALPACA/: Stylesheets.hs
cellular-automata/src/CA/: Core.hs  Strip.hs  Universe.hs
cellular-automata/src/CA/Format/: Combinators.hs  MCell.hs
cellular-automata/tests/: Main.hs
cellular-automata/tests/CA/Format/MCell/: Tests.hs  block.golden  compress.golden  glider.golden  options.golden  strip.golden
cellular-automata/tests/CA/Strip/: Tests.hs
cellular-automata/tests/CA/Universe/: Tests.hs
src/: CA.hs
src/CA/: ALPACA.hs  Core.hs  Internal.hs  Types.hs  Universe.hs  Utils.hs
src/CA/ALPACA/: Parse.hs  Run.hs  Stylesheets.hs
src/CA/Format/: MCell.hs
src/CA/Universe/: Internal.hs
tests/: Main.hs
tests/CA/: Tests.hs
tests/CA/Format/MCell/: Tests.hs  states.golden  strip.golden
tests/CA/Universe/: Tests.hs
tests/CA/Utils/: Tests.hs
