name:                cellular-automata-alpaca
version:             0.1.0.0
synopsis:            A package to interpret cellular automata written in ALPACA.
-- description:
-- homepage:            https://github.com/githubuser/cellular-automata#readme
license:             MIT
license-file:        LICENSE
author:              Brad Neimann
copyright:           2017 Brad Neimann
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  ghc-options:         -Wall -funfolding-use-threshold=16 -O2 -optc-O3
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     CA.ALPACA
                     , CA.ALPACA.Stylesheets
  other-modules:       CA.ALPACA.Parse
                     , CA.ALPACA.Run
  build-depends:       base          >= 4.7 && < 5
                     , cellular-automata
                     , megaparsec    >= 6.3 && < 6.6
                     , containers    >= 0.5 && < 0.6
                     , transformers  >= 0.5 && < 0.6
                     , microlens     >= 0.4 && < 0.5
                     , microlens-mtl >= 0.1 && < 0.2
                     , microlens-th  >= 0.4 && < 0.5
                     , MonadRandom   >= 0.5 && < 0.6
                     , finite-typelits >= 0.1 && < 0.2
