name:                cellular-automata-alpaca
version:             0.1.0.0
synopsis:            A package to interpret cellular automata written in ALPACA.
description:
    A parser and interpreter for the ALPACA cellular automaton specification
    language and stylesheet.
    .
    This package is intended to be used with the cellular-automata library.
homepage:            https://github.com/bradrn/cellular-automata#readme
license:             MIT
license-file:        LICENSE
author:              Brad Neimann
copyright:           (c) 2017-2019 Brad Neimann
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  ghc-options:         -Wall -funfolding-use-threshold=16 -O2 -optc-O3
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     CA.ALPACA
                     , CA.ALPACA.Stylesheets
  other-modules:       CA.ALPACA.Parse
                     , CA.ALPACA.Run
  build-depends:       base          >= 4.7 && < 5
                     , cellular-automata
                     , megaparsec    >= 7.0 && < 7.1
                     , containers    >= 0.5 && < 0.7
                     , transformers  >= 0.5 && < 0.6
                     , microlens     >= 0.4 && < 0.5
                     , microlens-mtl >= 0.1 && < 0.2
                     , microlens-th  >= 0.4 && < 0.5
                     , MonadRandom   >= 0.5 && < 0.6
                     , finite-typelits >= 0.1 && < 0.2
